--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 	<script src="AltLineChart.js"></script>
 </head>
 <body>
-	<canvas id="myChart" width="400" height="400" style="border: 1px solid greenyellow;"></canvas>
+	<canvas id="myChart" width="480" height="320" style="border: 1px solid greenyellow;"></canvas>
 
 	<script>
 
 		var data = [
+			{
+				strokeColor: '#999999',
+				data: [
+					{ x: 19, y: 5 }, { x: 90, y: 5 }
+				]
+			},
+			{
+				strokeColor: '#999999',
+				data: [
+					{ x: 19, y: 15 }, { x: 110, y: 25 }
+				]
+			},
 			{
 				strokeColor: '#F16220',
 				data: [
