- bezier сurves (base);

--- a/index.html
+++ b/index.html
@@ -15,17 +15,24 @@
 
 		var data = [
 			{
-				strokeColor: '#999999',
+				strokeColor: '#F16220',
 				data: [
-					{ x: 19, y: 5 }, { x: 90, y: 5 }
+					{ x: 20, y: 5 }, { x: 50, y: 40 }, { x: 90, y: 5 }
 				]
 			},
 			{
-				strokeColor: '#999999',
+				strokeColor: '#007ACC',
 				data: [
 					{ x: 19, y: 15 }, { x: 110, y: 25 }
 				]
 			},
+			{
+				strokeColor: '#007ACC',
+				data: [
+					{ x: 19, y: 100 }, { x: 110, y: 105 }
+				]
+			}
+			,
 			{
 				strokeColor: '#F16220',
 				data: [
