--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 	<script>
 
 		var data = [
-			{
-				strokeColor: '#F16220',
-				data: [
-					{ x: 20, y: 5 }, { x: 50, y: 40 }, { x: 90, y: 5 }
-				]
-			},
+			//{
+			//	strokeColor: '#F16220',
+			//	data: [
+			//		{ x: 20, y: 5 }, { x: 50, y: 40 }, { x: 90, y: 5 }
+			//	]
+			//},
 			{
 				strokeColor: '#007ACC',
 				data: [
