--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="AltLineChart.js"></script>
 </head>
 <body>
-	<canvas id="myChart" width="480" height="320" style="border: 1px solid greenyellow;"></canvas>
+	<canvas id="myChart" width="480" height="320" style="border: 1px solid gray;"></canvas>
 
 	<script>
 
@@ -23,13 +23,13 @@
 			{
 				strokeColor: '#007ACC',
 				data: [
-					{ x: 19, y: 15 }, { x: 110, y: 25 }
+					{ x: 16, y: 15 }, { x: 110, y: 25 }
 				]
 			},
 			{
 				strokeColor: '#007ACC',
 				data: [
-					{ x: 19, y: 100 }, { x: 110, y: 105 }
+					{ x: 19, y: 100 }, { x: 112, y: 105 }
 				]
 			}
 			,
@@ -37,7 +37,7 @@
 				strokeColor: '#F16220',
 				data: [
 					{ x: 19, y: 65 }, { x: 27, y: 59 }, { x: 28, y: 80 }, { x: 40, y: 81 },
-					{ x: 48, y: 56 }, { x: 86, y: 55 }, { x: 90, y: 40 }
+					{ x: 48, y: 56 }, { x: 86, y: 55 }, { x: 90, y: 40 }, { x: 95, y: 60 }
 				]
 			},
 			{
