- inner dataset model;
- draw point using base class method;

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 			//	]
 			//},
 			{
+				label: 'simple-1',
 				strokeColor: '#007ACC',
 				data: [
 					{ x: 16, y: 15 }, { x: 110, y: 25 }
 				]
 			},
 			{
+				label: 'simple-2',
 				strokeColor: '#007ACC',
 				data: [
 					{ x: 19, y: 100 }, { x: 112, y: 105 }
@@ -34,6 +36,7 @@
 			}
 			,
 			{
+				label: 'complex-1',
 				strokeColor: '#F16220',
 				data: [
 					{ x: 19, y: 65 }, { x: 27, y: 59 }, { x: 28, y: 80 }, { x: 40, y: 81 },
@@ -41,6 +44,7 @@
 				]
 			},
 			{
+				label: 'complex-2',
 				strokeColor: '#007ACC',
 				data: [
 					{ x: 19, y: 75 }, { x: 27, y: 69 }, { x: 28, y: 70 }, { x: 40, y: 31 },
