- draw lines after refactoring;

--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
 			//},
 			{
 				label: 'simple-1',
-				strokeColor: '#007ACC',
 				data: [
 					{ x: 16, y: 15 }, { x: 110, y: 25 }
 				]
 			},
 			{
 				label: 'simple-2',
-				strokeColor: '#007ACC',
+				strokeColor: 'red',
 				data: [
 					{ x: 19, y: 100 }, { x: 112, y: 105 }
 				]
@@ -48,7 +47,8 @@
 				strokeColor: '#007ACC',
 				data: [
 					{ x: 19, y: 75 }, { x: 27, y: 69 }, { x: 28, y: 70 }, { x: 40, y: 31 },
-					{ x: 48, y: 76 }, { x: 86, y: 45 }, { x: 90, y: 50 }
+					{ x: 48, y: 76 }, { x: 52, y: 32 }, { x: 33, y: 40 },
+					{ x: 86, y: 45 }, { x: 90, y: 50 }
 				]
 			}
 		];
