--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="AltLineChart.js"></script>
 </head>
 <body>
-	<canvas id="myChart" width="480" height="220"></canvas>
+	<canvas id="myChart" width="480" height="220" style="border: 1px dashed gray"></canvas>
 
 	<script>
 
@@ -63,7 +63,7 @@
 			scaleShowHorizontalLines: true,
 			scaleShowLabels: true,
 			scaleLabel: "<%=value%>°C",
-			scaleArgLabel: "<%=value%>mm"
+			scaleArgLabel: "<%=value%>mmm"
 		});
 
 	</script>
