--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		var ctx = document.getElementById("myChart").getContext("2d");
 		var myLineChart = new Chart(ctx).AltLineChart(data, {
 			bezierCurve: true,
-			showTooltips: false,
+			showTooltips: true,
 			scaleShowHorizontalLines: true,
 			scaleShowLabels: true,
 			scaleLabel: "<%=value%>°C",
