--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
 	<title>title</title>
 	<script src="Chart.js"></script>
-	<script src="Chart.FnLine.js"></script>
-	<script src="Chart.DateFnLine.js"></script>
+	<script src="Chart.Scatter.js"></script>
+	<script src="Chart.ScatterDateScale.js"></script>
+
 </head>
 <body>
 	<canvas id="myChartWithDates" width="480" height="220"></canvas>
@@ -59,13 +60,14 @@
 		Chart.defaults.global.responsive = true;
 		//Chart.defaults.global.animation = false;
 		var ctx = document.getElementById("myChart").getContext("2d");
-		var myLineChart = new Chart(ctx).FnLine(data, {
+		var myLineChart = new Chart(ctx).Scatter(data, {
 			bezierCurve: true,
 			showTooltips: true,
 			scaleShowHorizontalLines: true,
 			scaleShowLabels: true,
 			scaleLabel: "<%=value%>°C",
-			scaleArgLabel: "<%=value%>mmm"
+			scaleArgLabel: "<%=value%>mmm",
+			scaleBeginAtZero: true
 		});
 
 		var data2 = [
@@ -105,7 +107,7 @@
 			}];
 
 		var ctx2 = document.getElementById("myChartWithDates").getContext("2d");
-		var myDateLineChart = new Chart(ctx2).DateFnLine(data2, {
+		var myDateLineChart = new Chart(ctx2).DateScatter(data2, {
 			bezierCurve: true,
 			showTooltips: true,
 			scaleShowHorizontalLines: true,
