--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
 	<title>title</title>
 	<script src="Chart.js"></script>
-	<script src="Chart.Scatter.js"></script>
-	<script src="Chart.ScatterDateScale.js"></script>
+	<script src="Chart.Scatter.min.js"></script>
 
 </head>
 <body>
