fix js path in docs

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ var data = [
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="Chart.min.js"></script>
+	<script src="Chart.Core.min.js"></script>
 	<script src="Chart.Scatter.min.js"></script>
 
 	<script>
