--- a/test.html
+++ b/test.html
@@ -18,17 +18,19 @@
 					{ x: 10, y: 22000 },
 					{ x: 20, y: 25000 },
 					{ x: 30, y: 21000 },
-					{ x: 40, y: 23000 }
+					{ x: 50, y: 23000 }
 				]
 			}
 		], {
 			showScale: true,
-			scaleShowLabels: true,
+			scaleShowLabels: false,
 			scaleShowHorizontalLines: true,
-			scaleShowVerticalLines: true,
+			scaleShowVerticalLines: false,
 			scaleLineWidth: 1,
 			scaleLineColor: "red",
 			scaleGridLineColor: "#999",
+			scaleLabel: "<%=value%>°C",
+			scaleArgLabel: "<%=value%>mmm",
 			scaleGridLineWidth: 1
 		});
 	</script>
