- fix label rotation

--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
 			}
 		], {
 			showScale: true,
-			scaleShowLabels: false,
+			scaleShowLabels: true,
 			scaleShowHorizontalLines: true,
 			scaleShowVerticalLines: false,
 			scaleLineWidth: 1,
