--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
 
 		var data = [];
 
-		for (var ii = 0; ii < 400; ii++) {
+		for (var ii = 0; ii < 50; ii++) {
 
 			data.push({
 				x: new Date(2015, 1, ii),
@@ -40,6 +40,7 @@
 			scaleGridLineColor: "#999",
 			scaleLabel: "<%=value%>°C",
 			scaleArgLabel: "<%=value%>mmm",
+			scaleDateFormat: "mm/yyyy",
 			scaleGridLineWidth: 1,
 			pointDot: false,
 			scaleType: 'date'
