description for emptyDataMessage option

--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@ scaleLabel: <strong>"<%=value%>"</strong>,
 // Interpolated JS string - can access value
 scaleArgLabel: <strong>"<%=value%>"</strong>,
 
+// String - Message for empty data
+emptyDataMessage: <strong>"chart has no data"</strong>,		
+
 <strong>// SCALE</strong>
 
 // Boolean - Whether grid lines are shown across the chart
