--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
 
 		var data = [], data2 = [], ii = 0;
 
-		for (ii = 0; ii < 5; ii++) {
+		for (ii = 0; ii < 20; ii++) {
 
 			data.push({
 				x: Date.parse("2015-04-27 04:00:00 +0300") + ii * 24 * 3600000,
@@ -46,21 +46,25 @@
 			scaleDateTimeFormat: "HH:MM",
 			scaleGridLineWidth: 1,
 			useUtc: true,
-			pointDot: true,
-			scaleType: 'date'
+			pointDot: false,
+			scaleType: 'date',
+			animation: false
 		});
 
 		document.getElementById("legend").innerHTML = myChart.generateLegend();
 
-		//setInterval(function () {
+		setInterval(function () {
 
-		//	var arg = Date.parse("2015-04-27 04:00:00 +0300") + ii * 24 * 3600000;
+			var arg = Date.parse("2015-04-27 04:00:00 +0300") + ii * 24 * 3600000;
 
-		//	myChart.datasets[0].addPoint(arg, getRandomInt(0, 100));
-		//	myChart.datasets[1].addPoint(arg, getRandomInt(0, 100));
-		//	myChart.update(), ii++;
+			myChart.datasets[0].points.shift();
+			myChart.datasets[1].points.shift();
 
-		//}, 2000);
+			myChart.datasets[0].addPoint(arg, getRandomInt(0, 100));
+			myChart.datasets[1].addPoint(arg, getRandomInt(0, 100));
+			myChart.update(), ii++;
+
+		}, 200);
 	</script>
 </body>
 </html>
