https://github.com/dima117/Chart.Scatter/issues/10

--- a/index.html
+++ b/index.html
@@ -198,6 +198,21 @@ scaleShowHorizontalLines: <strong>true</strong>,
 // Boolean - Whether to show vertical lines (except Y axis)
 scaleShowVerticalLines: <strong>true</strong>,
 
+<strong>// SCALE RANGE</strong>
+
+// Boolean - If we want to override with a hard coded scale
+scaleOverride: <strong>false</strong>,
+
+// ** Required if scaleOverride is true **
+// Number - The number of steps in a hard coded scale
+scaleSteps: <strong>null</strong>,
+
+// Number - The value jump in the hard coded scale
+scaleStepWidth: <strong>null</strong>,
+
+// Number - The scale starting value
+scaleStartValue: <strong>null</strong>,
+
 <strong>// DATE SCALE</strong>
 
 // String - scale type: "number" or "date"
